@@ -1,12 +1,12 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.3.1
-Date: 2013-2-6
+Version: 1.3.2
+Date: 2013-2-8
 Depends: methods, GSEABase, DESeq, limma (>= 3.15.14)
 Imports: Biobase, GSEAlm, Category, bigmemory, bigmemoryExtras (>=
         1.1.2), Matrix (>= 1.0.9), parallel, annotate, genefilter, AnnotationDbi
-Suggests: KEGG.db, reactome.db, RUnit, BiocGenerics, reshape, lattice
+Suggests: KEGG.db, reactome.db, RUnit, BiocGenerics, reshape, lattice, GO.db
 Author: Thomas Sandmann <sandmann.thomas@gene.com>, Richard Bourgon
 	<bourgon.richard@gene.com> and Sarah Kummerfeld
 	<kummerfeld.sarah@gene.com>
