@@ -2,6 +2,10 @@
 \title{NEWS file for the gCMAP}
 
 \section{Changes in version 1.3.1}{
+ \item{NEW}{New KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap to functions to generate CMAPCollections from public annotation databases}
+}
+
+\section{Changes in version 1.3.1}{
  \item{NEW}{ New upIds and downIds methods for CMAPCollection objects.}
 }
 
